# XAI-System

./: .gitignore  main.py  pyproject.toml  readme.md
views/: __init__.py  ai_page.py  data_manager.py  explain.py  main_window.py  model_config_dialog.py  segmentation.py  slice_dock.py
views/control_panel/: __init__.py  base_panel.py  init_panel.py  model_panel.py  slice_panel.py  volume_panel.py
views/control_panel/model_panel/: __init__,.py  model_panel.py  predict_worker.py  target_layer_list.py
views/control_panel/model_panel/xai_subpanel/: __init__.py  seg_xres_cam.py  xai_config_list.py
views/display/: __init__.py  slice_view.py  volume.py  volume_renderer.py
views/display/transfer_editor/: color_gradient.py
views/modules/: __init__.py
views/modules/segmentation/: predict.py
views/modules/segmentation/configs/: test_net.py
views/modules/segmentation/custom_module/: __init__.py
views/segmentation_models/: __init__.py  predict.py
views/segmentation_models/configs/: test_net.py  testnet.py  unetcnx.py
views/segmentation_models/custom_module/: __init__.py
views/slice/: __init__.py  slice_toolbar.py  slice_view.py
views/utils/: __init__.py  collapsible_box.py  loading_overlay.py  progress_bar.py  twobytwo.py  util.py
views/utils/qtspinner/: spinner.py
views/volume/: __init__.py  camera_control_panel.py  histogram_viewer.py  slice_dock.py  volume.py  volume_renderer.py
views/volume/transfer_editor/: __init__.py  color_picker.py  editor_toolbox_button.py  opacity_canva.py  opacity_editor.py
(+27 files in other folders)
