[project]
name = "xai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mmengine-lite>=0.10.7",
    "monai>=1.5.0",
    "nibabel>=5.3.2",
    "numpy>=2.3.1",
    "pyside6>=6.9.1",
    "timm>=1.0.17",
    "vtk>=9.5.0",
]
