[project]
name = "xai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mmengine-lite>=0.10.7",
    "monai>=1.5.0",
    "nibabel>=5.3.2",
    "numpy>=2.3.1",
    "pyside6>=6.9.1",
    "scipy>=1.16.0",
    "timm>=1.0.17",
    "vtk>=9.5.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
